[package]
name = "gem_td"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
bevy-inspector-egui = "0.18"
bevy_prototype_debug_lines = { version = "0.10", features = ["3d"] }
bevy_egui = "0.20"
egui = "0.21"
bevy_mod_picking = "0.11"

[profile.dev]
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3
debug = false